Closed Bug 1446117 Opened 7 years ago Closed 7 years ago

Fix regressed read/write timeout of sockets

Categories

(Core :: Networking, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla61
Tracking Status
firefox61 --- fixed

People

(Reporter: mayhemer, Assigned: mayhemer)

References

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file, 2 obsolete files)

No description provided.
Attached patch v1 (obsolete) — Splinter Review
I forgot to reengage the timeout after we called on the handler (OnSocketReady). Somehow I through we were adding sockets to the active list on every poll iteration... adds also few logs to catch any more problems with it and I also thought we had a test for this... probably should build one, but I'm kinda lazy for it :)
Attachment #8959298 - Flags: review?(valentin.gosu)
Whiteboard: [necko-triaged]
Comment on attachment 8959298 [details] [diff] [review] v1 Unsolicited feedback: That fixes bug 1445174 (but I'm sure you've tried it yourself).
Attachment #8959298 - Flags: feedback+
Comment on attachment 8959298 [details] [diff] [review] v1 Thanks, but the patch is still wrong. Another update needed.
Attachment #8959298 - Attachment is obsolete: true
Attachment #8959298 - Flags: review?(valentin.gosu)
Attached patch v2 (obsolete) — Splinter Review
I've changed the api slightly, now we have EnsureTimeout(now) that makes sure we mark the epoch for timeout calculation when not already marked, so this can be called repeatedly on any place we want to start the socket timeout, which is when we are about to poll it - this was the missing piece. https://treeherder.mozilla.org/#/jobs?repo=try&revision=5b528c1e432af59f7031e6cf2d48644057225456
Attachment #8959566 - Flags: review?(valentin.gosu)
Comment on attachment 8959566 [details] [diff] [review] v2 Review of attachment 8959566 [details] [diff] [review]: ----------------------------------------------------------------- nit: Write a more detailed description regarding what the bug was and how we fixed it. ::: netwerk/base/nsSocketTransportService2.h @@ +172,5 @@ > > public: > bool IsTimedOut(PRIntervalTime now) const; > + void EnsureTimeout(PRIntervalTime now); > + void DisengageTimeout(); Add comments describing what these do.
Attachment #8959566 - Flags: review?(valentin.gosu) → review+
Attached patch v2.1Splinter Review
updated.
Attachment #8959566 - Attachment is obsolete: true
Attachment #8960166 - Flags: review+
Keywords: checkin-needed
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/1970adec8557 Make sure we also mark timeout epoch on a network socket when we are polling it for read/write, fix regression from bug 1444160. r=valentin
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: